Port progress